--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "chai": "3.4.1",
+    "dotenv": "^4.0.0",
     "esdoc": "0.4.3",
     "faker": "^4.1.0",
     "istanbul": "0.4.2",
